# ChangeLog for app-i18n/uim
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.265 2014/04/14 14:27:44 jer Exp $

  14 Apr 2014; Jeroen Roovers <jer@gentoo.org> uim-1.8.6.ebuild:
  Stable for HPPA (bug #507004).

*uim-1.8.6 (04 Mar 2014)

  04 Mar 2014; Naohiro Aota <naota@gentoo.org> +uim-1.8.6.ebuild:
  version bump and ebuild clean up by miflab@gmail.com #501938

  29 Jan 2014; Naohiro Aota <naota@gentoo.org> metadata.xml,
  uim-1.7.3-r1.ebuild, uim-1.7.3.ebuild, uim-1.8.0-r1.ebuild, uim-1.8.0.ebuild,
  uim-1.8.2-r1.ebuild, uim-1.8.2.ebuild, uim-1.8.3-r1.ebuild, uim-1.8.3.ebuild,
  uim-1.8.4-r1.ebuild, uim-1.8.4.ebuild:
  Drop prime support. #464286

  07 Sep 2013; Pacho Ramos <pacho@gentoo.org> uim-1.7.3-r1.ebuild,
  uim-1.7.3.ebuild, uim-1.8.0-r1.ebuild, uim-1.8.0.ebuild, uim-1.8.2-r1.ebuild,
  uim-1.8.2.ebuild, uim-1.8.3-r1.ebuild, uim-1.8.3.ebuild, uim-1.8.4-r1.ebuild,
  uim-1.8.4.ebuild:
  Use query-immodules from eclass to inherit fixes and changes from there

*uim-1.8.2-r1 (06 Apr 2013)
*uim-1.8.4-r1 (06 Apr 2013)
*uim-1.8.0-r1 (06 Apr 2013)
*uim-1.7.3-r1 (06 Apr 2013)
*uim-1.8.3-r1 (06 Apr 2013)

  06 Apr 2013; Naohiro Aota <naota@gentoo.org> +files/uim-1.7.3-linguas.patch,
  +uim-1.7.3-r1.ebuild, +uim-1.8.0-r1.ebuild, +uim-1.8.2-r1.ebuild,
  +uim-1.8.3-r1.ebuild, +uim-1.8.4-r1.ebuild:
  Honor LINGUAS setting. #402891

  06 Apr 2013; Naohiro Aota <naota@gentoo.org> -files/uim-1.5.4-gcc43.patch,
  -files/uim-1.5.4-gentoo.patch, -files/uim-1.6.0-linker.patch,
  -files/uim-1.6.1-canna.patch, -files/uim-1.6.1-libnotify-0.7.patch,
  -files/uim-1.7.1-qt4.patch, -uim-1.4.2.ebuild, -uim-1.5.7.ebuild,
  -uim-1.6.1.ebuild, -uim-1.7.1-r1.ebuild, -uim-1.7.1.ebuild, uim-1.8.4.ebuild:
  Drop old versions

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> uim-1.5.7.ebuild,
  uim-1.6.1.ebuild, uim-1.7.1-r1.ebuild, uim-1.7.1.ebuild, uim-1.7.3.ebuild,