@@ -24,13 +24,14 @@ EBUILD uim-1.8.3-r1.ebuild 6518 SHA256 78d1755b026e82f98cca756c12c1e8275c08ca386
 EBUILD uim-1.8.3.ebuild 6325 SHA256 e08c79c82d7a6077afaf190df1d8e9d805c425df401146eac46c61db628217da SHA512 80b7dd9d42f042d817639b20d5009c4bd9704f1c86f28aa3e55f86543868cfea8f4bb0cdc126b35e62ca6ca63dc48fc67524b12a9f4c85719f710fc4b60b32b1 WHIRLPOOL 77bdd41809b147e7716a717808d050c407d98620768bf7d8dac39faef7a552bef7ab94dafa8487b2237c21c9a024f9d9be643242d0c5fdd91e9cdf9b0a82c80b
 EBUILD uim-1.8.4-r1.ebuild 6518 SHA256 8e57d2c4c5a5aac596b8916b4cf5c2330163bb0834ac3b734714970387640e28 SHA512 3318b0dc4ddb4fdec394d7e80ffa88f628e0aa1043884de922e8a6250338e53b34edfa71ca1a262db277c1bfcffbeeb8a1a867a8971d1ccb150f1bbd92d5baa4 WHIRLPOOL 696d9c12135453835f385ea90d55f0269046b73fc9c98ed109e79db758129a1d5d791e77a2ffd8b5483943272fc5129cd80ddea92a64c19cedf1ba3eef70a599
 EBUILD uim-1.8.4.ebuild 6338 SHA256 ef0562bc3bbc7c2fe3e2be77bd49647349339f8159b5f0c89499fd4314a13201 SHA512 2a7bd266d21bcd3db9bee5e7e6d29e66e27fc02b366bcd315c8bee97186ca4cf971e65df8361fef6810121bc4bfb1a15c9d2722e5f6579cc07f2bd0ee716397f WHIRLPOOL 59f9b1833d08a17df5a8686d5accc9ae0458c0033f9eb6fb3f351acd28291fc40c79f9874ae91f45bcd728c260d0115382b8a69a24b022db1235c3d70398e26f
+EBUILD uim-1.8.6-r1.ebuild 6005 SHA256 487e3a92684f2632017c2fc6f9a6bb732dfc35ce45322ef271472646282386c1 SHA512 67dc3fdcc8f5404bc3719b18acdc703d3793492c3f7bd1b3cc7b3536b371cdb509dd8ee6c0c7665603f8f312dccb1ea105776c5852b3c31ae8c7323559f424ca WHIRLPOOL 1d881172571d667020b61c012e75837e0776e173b6830cbc48bb59940ab88ea395f1ecb0b0e15dd9bcd408c9a4699ad34e0a64ec77d73831e8d6dc81023ad17d
 EBUILD uim-1.8.6.ebuild 6290 SHA256 d99163b2a8d4a5c15b9d90956177f0707a4ce766c18fd7bcd8f7cf7fb964a2ea SHA512 d49b1abd5dcbe38ee11f21f27133a349b2fd7c561475b3484c5ad18bfb9b2e85af5ed2fe62054f570652823d74b1bbd557c5425f62abff35dfeb7c559a71b824 WHIRLPOOL 1527e132145fce4c77e4ba7e543053468a37494d0dbe34205c081ae2331b4ad8d5d9b9fbf5edcbc4ae35598e1616fe992d5d6741672e1ede56104e2d4f22d8f4
-MISC ChangeLog 38444 SHA256 dbb6570c796fae51657af7c0df6a8682f652206785c546a5941d30d4a138da13 SHA512 1706e3928d6920749ab0fa83293693e64b824ed856a3bdd91ca91c253a56591bd6fb9c253d4ea1d1512f4aa41d10840113117592ba5fb0e706a22fc093f655e1 WHIRLPOOL 431d911816d78c8e9990b814c98aa761974982aa0e7955ccac1b4ea089f16ffde2779de832b11724da6b02a446eaa2850b771dbc40601e294c8a1f7c986dba0d
+MISC ChangeLog 38589 SHA256 5d5d82309d9dd928f44ae6f92728c58c0f27f59d2af41eb9ad807a151514aeae SHA512 e8ab608d525330e2430925ba7f99261ac4d902d3363d2e24f331c509b97b5ef3340f9fb948b0e3dfc8d7bd10c216e83b5f9c3abd2763581a0af145632dd3ce52 WHIRLPOOL 366c71755258ce1f83bce0e542e58ecec6ac887b11d46b0f543efbb5fe39abf685af80ae62bf75998339cc535fd00cf154281071a4991b27e73d1226f04364e1
 MISC metadata.xml 890 SHA256 a44487395787a97d2a90990faf68be0d2ce662ffe82d41bf6073db1958fc8af5 SHA512 d46123eefd36462de4305463425a616039398d95b64c7b8e77dbc7cd738152ea5b5a8efbd2591f539cb6b78264834eea306c4023879f3d51608a82c72de85763 WHIRLPOOL d579cbc429ec7db5455ae385e9fb06e88cb4de5edf5e9408bbe709c3ac2f5ea3f798a6f09eb68d8bd336bdb2502562edab4bb2fb7e76aa715ae81b3d5c817c6a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNL8GEACgkQVWmRsqeSphOuZgCeL6KjNMntIOI+dcARXl0kMNiB
-pfkAnjyaf3Fya9inU44wcQKqnbvL+SBf
-=46pa
+iEYEAREIAAYFAlN5A+kACgkQCaWpQKGI+9SqMgCeLN3oJb3dbFuBF/rPsGpkaZcj
+MmwAoIbG0XBSbPjdryhgGVXmpZlU3PZb
+=sOkJ
 -----END PGP SIGNATURE-----
