@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/uim
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.265 2014/04/14 14:27:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/uim/ChangeLog,v 1.266 2014/05/18 19:03:04 pacho Exp $
+
+*uim-1.8.6-r1 (18 May 2014)
+
+  18 May 2014; Pacho Ramos <pacho@gentoo.org> +uim-1.8.6-r1.ebuild:
+  Drop support for old gnome-panel (#508854)
 
   14 Apr 2014; Jeroen Roovers <jer@gentoo.org> uim-1.8.6.ebuild:
   Stable for HPPA (bug #507004).
